<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/parent" android:background="@color/cardview_shadow_end_color" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/rlHeader" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="@dimen/_50dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <ImageButton android:id="@id/ibBack" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/back_button" android:adjustViewBounds="true" android:layout_centerVertical="true" android:onClick="backButtonPressed" android:scaleX="0.6" android:scaleY="0.6" style="@style/Widget.AppCompat.Light.ActionButton.CloseMode" />
        <TextView android:textSize="@dimen/_18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_signature" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:fontFamily="sans-serif-light" />
        <View android:background="@android:color/black" android:layout_width="match_parent" android:layout_height="0.5dp" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <seva.com.sevapackages.signature.SignPad android:id="@id/sigPad" android:background="@color/cardview_shadow_end_color" android:layout_width="match_parent" android:layout_height="0.0dp" app:clearOnDoubleClick="false" app:layout_constraintBottom_toTopOf="@id/vDevider" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/rlHeader" app:penColor="@android:color/black" />
    <View android:id="@id/vDevider" android:background="@android:color/darker_gray" android:layout_width="match_parent" android:layout_height="1.0dp" app:layout_constraintBottom_toTopOf="@id/tvUserName" />
    <TextView android:textSize="@dimen/_18sp" android:textColor="@android:color/black" android:gravity="center_horizontal" android:id="@id/tvUserName" android:background="@android:color/white" android:padding="@dimen/_10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="" app:layout_constraintBottom_toTopOf="@id/rlBottomPanel" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/rlBottomPanel" android:background="@android:color/white" android:padding="@dimen/dp_15" android:layout_width="0.0dp" android:layout_height="wrap_content" android:weightSum="100.0" app:layout_constraintBottom_toBottomOf="parent">
        <TextView android:textSize="@dimen/sp_16" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@id/tvSigClear" android:background="@android:color/darker_gray" android:paddingTop="@dimen/_7dp" android:paddingBottom="@dimen/_7dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/text_clear" android:layout_weight="48.0" app:layout_constraintStart_toStartOf="parent" />
        <View android:layout_width="0.0dp" android:layout_height="@dimen/_10dp" android:layout_weight="4.0" />
        <TextView android:textSize="@dimen/sp_16" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@id/tvSigDone" android:background="@color/smiotaGreen" android:paddingTop="@dimen/_7dp" android:paddingBottom="@dimen/_7dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/text_done" android:layout_weight="48.0" app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
