<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/parent" android:background="@color/cardview_shadow_end_color" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <RelativeLayout android:id="@id/titleBarLayoutID" android:background="@android:color/background_light" android:layout_width="match_parent" android:layout_height="@dimen/_50dp" android:layout_alignParentTop="true" android:layout_alignParentStart="true">
                <RelativeLayout android:paddingRight="@dimen/_10dp" android:layout_width="@dimen/_70dp" android:layout_height="match_parent" android:onClick="backButtonPressed">
                    <ImageButton android:id="@id/backButtonLayoutID" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/back_button" android:adjustViewBounds="true" android:layout_centerVertical="true" android:onClick="backButtonPressed" android:scaleX="0.6" android:scaleY="0.6" style="@style/Widget.AppCompat.Light.ActionButton.CloseMode" />
                </RelativeLayout>
                <TextView android:textSize="@dimen/_18sp" android:textColor="@android:color/black" android:id="@id/appTitleTextViewID" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8dp" android:layout_marginBottom="@dimen/_8dp" android:text="Settings" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:fontFamily="sans-serif-light" />
                <View android:background="?android:colorPrimaryDark" android:layout_width="match_parent" android:layout_height="0.30000007dp" android:layout_alignParentBottom="true" />
            </RelativeLayout>
            <androidx.cardview.widget.CardView android:id="@id/notificationsCardViewID" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20dp" android:layout_below="@id/titleBarLayoutID" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent">
                <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/_16dp">
                    <RelativeLayout android:id="@id/rateAppViewID" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_16dp" android:layout_marginBottom="@dimen/_16dp" android:layout_alignParentTop="false" android:onClick="rateMyApp">
                        <ImageView android:id="@id/rateAppArrowID" android:background="@drawable/chevron" android:visibility="visible" android:layout_width="@dimen/_10dp" android:layout_height="@dimen/_16dp" android:layout_marginRight="@dimen/_16dp" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                        <TextView android:textSize="@dimen/_18sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Rate this app" android:layout_centerVertical="true" />
                    </RelativeLayout>
                    <View android:id="@id/view7" android:background="?android:colorPrimaryDark" android:layout_width="match_parent" android:layout_height="0.30000007dp" android:layout_below="@id/rateAppViewID" android:layout_alignParentTop="false" android:layout_alignParentBottom="false" />
                    <RelativeLayout android:id="@id/helpViewID" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_16dp" android:layout_marginBottom="@dimen/_16dp" android:layout_below="@id/view7">
                        <ImageView android:id="@id/helpArrowID" android:background="@drawable/chevron" android:visibility="visible" android:layout_width="@dimen/_10dp" android:layout_height="@dimen/_16dp" android:layout_marginRight="@dimen/_16dp" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                        <TextView android:textSize="@dimen/_18sp" android:textColor="@android:color/black" android:id="@id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Help" android:layout_centerVertical="true" />
                    </RelativeLayout>
                    <View android:id="@id/view8" android:background="?android:colorPrimaryDark" android:layout_width="match_parent" android:layout_height="0.30000007dp" android:layout_below="@id/helpViewID" android:layout_alignParentTop="false" android:layout_alignParentBottom="false" />
                    <RelativeLayout android:id="@id/termsArrowID" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_16dp" android:layout_marginBottom="@dimen/_16dp" android:layout_below="@id/view8">
                        <ImageView android:id="@id/imageView4" android:background="@drawable/chevron" android:visibility="visible" android:layout_width="@dimen/_10dp" android:layout_height="@dimen/_16dp" android:layout_marginRight="@dimen/_16dp" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                        <TextView android:textSize="@dimen/_18sp" android:textColor="@android:color/black" android:id="@id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Terms" android:layout_centerVertical="true" android:elevation="@dimen/_2dp" />
                    </RelativeLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:id="@id/soundCardViewID" android:background="@color/cardview_shadow_end_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10dp" android:layout_below="@id/notificationsCardViewID" card_view:cardUseCompatPadding="false"
              xmlns:card_view="http://schemas.android.com/apk/res-auto">
                <LinearLayout android:orientation="vertical" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <RelativeLayout android:id="@id/relative_layout_sound" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_16dp" android:layout_marginTop="@dimen/_16dp" android:layout_marginBottom="@dimen/_16dp">
                        <TextView android:textSize="@dimen/_18sp" android:textColor="@android:color/black" android:id="@id/textViewSound" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sound_notification" />
                        <androidx.appcompat.widget.SwitchCompat android:textAppearance="?android:textAppearanceMedium" android:id="@id/switchButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/_16dp" android:checked="false" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                    </RelativeLayout>
                    <LinearLayout android:orientation="vertical" android:id="@id/liner_layout_ringtone_group" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <View android:background="?android:colorPrimaryDark" android:layout_width="match_parent" android:layout_height="0.30000007dp" />
                        <RelativeLayout android:orientation="horizontal" android:id="@id/relative_layout_ringtone_one" android:padding="@dimen/_10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_16dp" android:layout_marginRight="@dimen/_16dp">
                            <TextView android:textSize="@dimen/_14sp" android:textColor="@android:color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_sound_1" android:layout_alignParentLeft="true" />
                            <TextView android:textSize="@dimen/_18sp" android:textColor="@color/smiotaGreen" android:id="@id/text_view_ringtone_one" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tick" android:layout_alignParentRight="true" />
                        </RelativeLayout>
                        <View android:background="?android:colorPrimaryDark" android:layout_width="match_parent" android:layout_height="0.30000007dp" android:layout_marginLeft="@dimen/_16dp" android:layout_marginRight="@dimen/_16dp" />
                        <RelativeLayout android:orientation="horizontal" android:id="@id/relative_layout_ringtone_two" android:padding="@dimen/_10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_16dp" android:layout_marginRight="@dimen/_16dp">
                            <TextView android:textSize="@dimen/_14sp" android:textColor="@android:color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_sound_2" android:layout_alignParentLeft="true" />
                            <TextView android:textSize="@dimen/_18sp" android:textColor="@color/smiotaGreen" android:id="@id/text_view_ringtone_two" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tick" android:layout_alignParentRight="true" />
                        </RelativeLayout>
                        <View android:background="?android:colorPrimaryDark" android:layout_width="match_parent" android:layout_height="0.30000007dp" android:layout_marginLeft="@dimen/_16dp" android:layout_marginRight="@dimen/_16dp" />
                        <RelativeLayout android:orientation="horizontal" android:id="@id/relative_layout_ringtone_three" android:padding="@dimen/_10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_16dp" android:layout_marginRight="@dimen/_16dp">
                            <TextView android:textSize="@dimen/_14sp" android:textColor="@android:color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_sound_3" android:layout_alignParentLeft="true" />
                            <TextView android:textSize="@dimen/_18sp" android:textColor="@color/smiotaGreen" android:id="@id/text_view_ringtone_three" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tick" android:layout_alignParentRight="true" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <RelativeLayout android:id="@id/relative_layout_sound_notification_info" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_16dp" android:layout_marginTop="@dimen/_10dp" android:layout_marginRight="@dimen/_16dp" android:layout_marginBottom="@dimen/_16dp" android:layout_below="@id/soundCardViewID">
                <TextView android:id="@id/tvSettingsShow" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/smiota_uses_sound_notification_to_" />
            </RelativeLayout>
            <androidx.cardview.widget.CardView android:id="@id/unlinkCardViewID" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20dp" android:layout_below="@id/relative_layout_sound_notification_info">
                <TextView android:textSize="@dimen/_18sp" android:textColor="@android:color/holo_red_light" android:id="@id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_16dp" android:layout_marginTop="@dimen/_16dp" android:layout_marginBottom="@dimen/_16dp" android:text="Unlink this phone" />
            </androidx.cardview.widget.CardView>
            <TextView android:id="@id/revisionTextViewID" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20dp" android:text="My packages version 1.5.2" android:layout_below="@id/unlinkCardViewID" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
